# sparse-neighbors-search

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  developmentScript.py  developmentScript_bursi.py  environment.yaml  getFrequencyOfOccurencesOfHashValues.py  getSizeOfHashFunctions.py  hyperoptResults.txt  hyperoptTest.py  requirements.txt  requirements_linux.txt  requirements_macos.txt  runBenchmark.sh  runSingleBenchmark.py  run_test.py  setup.py
bioinf_learn/: __init__.py
bioinf_learn/computation/: CMakeCache.txt  CMakeLists.txt  Makefile  bursi_addInfo  bursi_instances  cmake_install.cmake  compile~  fit_kneighbors  fit_kneighbors.cpp  hash.h  inverseIndex.cpp  inverseIndex.cu  inverseIndex.h  inverseIndexCuda.cu  inverseIndexCuda.h  inverseIndexStorageUnorderedMap.cpp  inverseIndexStorageUnorderedMap.h  kSizeSortedMap.h  kernel.cu  kernel.h  nearestNeighbors.cpp  nearestNeighbors.h  nearestNeighborsCuda.cu  nearestNeighborsCuda.h  parsePythonToCpp.h  sparseMatrix.h  typeDefinitionsBasic.h  typeDefinitionsCuda.cuh  typeDefinitionsCuda.h
bioinf_learn/computation/interface/: nearestNeighbors_PythonInterface.cpp
development/: compile  fit_kneighbors.cpp  setup.py
docs/: Makefile  README.md  conf.py  index.rst  make.bat
example/: 20_newsgroups_dataset.ipynb  Bursi_dataset.ipynb  CPU scalability.ipynb  Classifier.ipynb  Methods to save memory.ipynb  MinHash vs Wta-Hash.ipynb  RNA_data_matrix.ipynb  Random projection.ipynb  SpectralClustering.ipynb  Untitled.ipynb  artificial_dataset.ipynb  benchmark_20_newsgroups_dataset.ipynb  benchmark_RNA.ipynb  (+5 more)
test/: CMakeLists.txt  bloomierFilterTest.cpp
(+135 files in other folders)
